--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@ngrx/store": "^4.1.1",
     "@ngrx/store-devtools": "^4.1.1",
     "@reactivex/rxjs": "^5.5.2",
+    "concurrently": "^3.5.1",
     "core-js": "^2.4.1",
+    "json-server": "^0.12.1",
     "lodash": "^4.17.4",
     "ngrx-store-freeze": "^0.2.0",
     "rxjs": "^5.5.2",
